[gd_scene load_steps=11 format=3 uid="uid://dt68ku1phupn3"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_7xkn6"]
[ext_resource type="Texture2D" uid="uid://cw8xsl33p3b7g" path="res://characters/player/player-up-1.png" id="2_qshyo"]
[ext_resource type="Texture2D" uid="uid://bblmoaouu0d0h" path="res://characters/player/player-walk-2.png" id="3_6dlcg"]
[ext_resource type="Texture2D" uid="uid://b3ssi1g5bno71" path="res://characters/player/player-up-2.png" id="4_bbs05"]
[ext_resource type="Script" path="res://components/health_label.gd" id="5_4n1ai"]
[ext_resource type="Script" path="res://components/hurtbox_area.gd" id="6_55pa7"]
[ext_resource type="PackedScene" uid="uid://c6150nl7avrsl" path="res://weapons/melee/melee.tscn" id="7_bnptl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lgod0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qshyo")
}, {
"duration": 1.0,
"texture": ExtResource("3_6dlcg")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qshyo")
}, {
"duration": 1.0,
"texture": ExtResource("4_bbs05")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ijyl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dwjla"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_7xkn6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_lgod0")
animation = &"right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7ijyl")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -37.0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_4n1ai")
max_health = 100.0

[node name="HurtboxArea" type="Area2D" parent="." node_paths=PackedStringArray("health_label")]
collision_layer = 0
script = ExtResource("6_55pa7")
health_label = NodePath("../HealthLabel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxArea"]
shape = SubResource("CapsuleShape2D_dwjla")

[node name="Melee" parent="." instance=ExtResource("7_bnptl")]
position = Vector2(-4.76837e-07, 0)
rotation = -0.785398

[connection signal="dead" from="HealthLabel" to="." method="_on_health_label_dead"]
